# api_network

./: Makefile  Makefile.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
yatube_api/: db.sqlite3  manage.py
yatube_api/api/: permissions.py  serializers.py  urls.py  utils.py  views.py
yatube_api/posts/: admin.py  models.py
yatube_api/posts/migrations/: 0001_initial.py  0002_alter_comment_post.py
yatube_api/yatube_api/: settings.py  urls.py
